# variance-analyzer

./: .gitignore  CLAUDE.md  SETUP.md  STREAMING_IMPLEMENTATION.md  app_streamlit.py  main.py  new_ui.py  pyproject.toml  requirements.txt  tz.md
ai/: tools.py  variance_agent.py
api/: main.py  routes.py  schemas.py
core/: calculator.py  filters.py  loader.py  mapper.py  models.py
docs/: mapping_workflow_fix.md
frontend/: chat.html
tasks/: final_features.md  task_01.md  task_02.md  task_03.md  task_streaming.md  task_streamlit_01.md  task_streamlit_02_streaming.md  task_streamlit_03_file_upload.md
tests/: test_ai.py  test_calculator.py  test_file_upload.py  test_filters.py  test_loader.py  test_mapper.py  test_models.py
